# simplewall-rs

./: .gitattributes  .gitignore  Cargo.toml  NOTICE  README.md  build.rs  linux-build.sh
.cargo/: config.toml
.github/workflows/: release.yml
amwall-core/: Cargo.toml
amwall-core/src/: lib.rs  rules.rs
assets/: amwall.rc  manifest.xml  simplewall-rs.rc
assets/icons/: README.md
examples/: install_demo.rs
linux/: Cargo.toml
linux/amwall-cli/: Cargo.toml
linux/amwall-cli/src/: main.rs
linux/amwall-daemon/: Cargo.toml
linux/amwall-daemon/debian/: amwall-daemon.service  amwall.desktop  org.amwall.Daemon1.conf  org.amwall.Daemon1.policy  postinst  postrm  prerm  rules.toml.example
linux/amwall-daemon/debian/blocklists/: ads.txt  malware.txt  telemetry.txt
linux/amwall-daemon/src/: main.rs
linux/amwall-ebpf/: Cargo.toml
linux/amwall-ebpf/.cargo/: config.toml
linux/amwall-ebpf/src/: main.rs
linux/amwall-gui-qt/: CMakeLists.txt
linux/amwall-gui-qt/src/: appstab.cpp  appstab.h  blocklisttab.cpp  blocklisttab.h  connectionstab.cpp  connectionstab.h  connectprompt.cpp  connectprompt.h  dashboard.cpp  dashboard.h  dbusclient.cpp  dbusclient.h  main.cpp  mainwindow.cpp  mainwindow.h  packetslogtab.cpp  packetslogtab.h  promptcoordinator.cpp  promptcoordinator.h  ruleeditor.cpp  ruleeditor.h  settingsdialog.cpp  settingsdialog.h  userrulestab.cpp  userrulestab.h
linux/amwall-gui-qt/translations/: amwall-gui_en_US.ts
locales/: ar.toml  az.toml  be.toml  ca.toml  cs.toml  da.toml  de.toml  el.toml  en.toml  es.toml  et.toml  fa.toml  fi.toml  fr.toml  gen_locale.py  hu.toml  hy.toml  id.toml  it.toml  ja.toml  ka.toml  kk.toml  ko.toml  ky.toml  lt.toml  lv.toml  nl.toml  pl.toml  pt-BR.toml  pt.toml  ro.toml  ru.toml  sk.toml  sl.toml  sr-Latn.toml  sr.toml  sv.toml  th.toml  tr.toml  uk.toml  (+3 more)
scripts/: build-msi.ps1
src/: gui.rs  hash.rs  install.rs  internal_rules_state.rs  lib.rs  locale.rs  logging.rs  main.rs  paths.rs  profile.rs  rules.rs  skipuac.rs  wfp.rs
src/gui/: app.rs  app_properties.rs  apps_context_menu.rs  connect_dialog.rs  connections.rs  dialogs.rs  event_log.rs  first_run_wizard.rs  font.rs  icons.rs  ids.rs  listview_groups.rs  main_window.rs  notification.rs  rule_editor.rs  settings.rs  settings_dialog.rs  startup.rs  toolbar.rs  tray.rs  update_check.rs  uwp_enum.rs
src/locale/: ids.rs
src/profile/: parse.rs  serialize.rs
src/rules/: compile.rs  parse.rs
src/wfp/: condition.rs  events.rs  filter.rs  provider.rs  sublayer.rs
tests/: end_to_end.rs  profile_parse.rs
wix/: Changelog.rtf  License.rtf  main.wxs
wix/lang/: ar-SA.wxl  cs-CZ.wxl  da-DK.wxl  de-DE.wxl  el-GR.wxl  en-us.wxl  es-ES.wxl  et-EE.wxl  fi-FI.wxl  fr-FR.wxl  he-IL.wxl  hu-HU.wxl  it-IT.wxl  ja-JP.wxl  kk-KZ.wxl  ko-KR.wxl  lt-LT.wxl  lv-LV.wxl  nl-NL.wxl  pl-PL.wxl  pt-BR.wxl  pt-PT.wxl  ro-RO.wxl  ru-RU.wxl  sk-SK.wxl  sl-SI.wxl  sv-SE.wxl  th-TH.wxl  tr-TR.wxl  uk-UA.wxl  vi-VN.wxl  zh-CN.wxl  zh-TW.wxl
wix/scripts/: set-languages.vbs  write-installer-locale.vbs
