[package]
name = "amwall"
version = "0.0.1"
edition = "2024"
description = "Rust port of simplewall, a Windows Filtering Platform (WFP) firewall"
license = "GPL-3.0-or-later"
repository = "https://github.com/amrust/amwall"
readme = "README.md"
authors = ["amwall contributors"]
rust-version = "1.85"

[dependencies]
quick-xml = "0.36"
# Used to decode the embedded Silk PNGs into BGRA pixel buffers we
# can hand to GDI's CreateDIBSection for the toolbar imagelist.
# `default-features = false` strips out JPEG / WebP / etc; we only
# need PNG.
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_Security_WinTrust",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_Rpc",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_System_Time",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.5"

[dev-dependencies]
# Property-based testing for the rule-string parser (M3.4).
# `default-features = false` drops the timeout/fork machinery
# we don't use, which keeps the dev-build dep tree small.
proptest = { version = "1", default-features = false, features = ["std"] }
